// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table User {
  id ID [pk, not null]
  username char(255) [unique, not null]
  email char(255) [unique, not null]
  password char(255) [not null]

  first_name char(255) [not null]
  last_name char(255) [not null]
  created_at timestamp [not null, default: 'now()']
  permission FK [ref: < Permission.id, not null]
}

Table Permission {
  id ID [pk, not null]
  level char(20) [not null]
  description char(50) [not null]
}

Table Subject {
  id ID [pk, not null]
  code char(3) [unique, not null]
  name char(20) [not null]
  capacity int [not null]
  guarantor FK [ref: - User.id, not null]
  description char(255)
}

Table Activity {
  id ID [pk, not null]
  anotation char(255) [not null]
  duration int [not null, note: 'in hours']
  capacity int [not null]
  subject FK [ref: > Subject.id, not null]
}

Table InstruktorActivity {
  id ID [pk, not null]
  instruktor FK [ref: < User.id, not null]
  activity FK [ref: < Activity.id, not null]
  description char(255)
}

Table StudentSubject {
  id ID [pk, not null]
  student FK [ref: < User.id, not null]
  subject FK [ref: < Subject.id, not null]
}

Table StudentActivity {
  id ID [pk, not null]
  student FK [ref: > User.id]
  activity FK [ref: > Activity.id]
  data_time timestamp [not null]
}

Table Room {
  id ID [pk, not null]
  code char(6) [not null]
  capacity int [not null]
  schedule FK [ref: < Schedule.id, not null]
  description char(255)
}

Table Schedule {
  id ID [pk, not null]
  scheduler FK [ref: > User.id, not null]
  activity FK [ref: < Activity.id, not null]
  data_time timestamp [not null]
}

Table InstruktorRequest {
  id ID [pk, not null]
  instructor FK [ref: > User.id, not null]
  activity FK [ref: > Activity.id, not null]
  data_time timestamp [not null]
}
